--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                   <span class="text-danger">*</span>
                 </label>
                 <br>
-              <input type="text" id="name" placeholder="Your Nmae" required style="width: 100%;border-radius: 5px;border: none;">
+              <input type="text" id="name" placeholder="Your Nmae" required style="width: 100%;border-radius: 5px;border: none; height:40px ;">
               </div>
               <br>
               <div class="email">
@@ -549,7 +549,7 @@
                   <span class="text-danger">*</span>
                 </label>
                 <br>
-              <input type="email" id="email" placeholder="Email id" required style="width: 100%;border-radius: 5px;border: none;">
+              <input type="email" id="email" placeholder="Email id" required style="width: 100%;border-radius: 5px;border: none;height:40px">
               </div>
               <br>
               <div class="phone">
@@ -557,7 +557,7 @@
                   <span class="text-danger">*</span>
                 </label>
                 <br>
-              <input type="tel" id="phone" placeholder="Phone no." required style="width: 100%;border-radius: 5px;border: none;">
+              <input type="tel" id="phone" placeholder="Phone no." required style="width: 100%;border-radius: 5px;border: none;height:40px">
               </div>
               <br>
               <div class="subject">
@@ -565,7 +565,7 @@
                   <span class="text-danger">*</span>
                 </label>
                 <br>
-                <input type="text" id="subject" placeholder="Subject" required style="width: 100%;border-radius: 5px;border: none;">
+                <input type="text" id="subject" placeholder="Subject" required style="width: 100%;border-radius: 5px;border: none;height:40px">
               </div>
               <br>
               <div class="massage">
